fixed header issues on mobile

--- a/src/styles/CustomSelect.css
+++ b/src/styles/CustomSelect.css
@@ -33,7 +33,7 @@
 .options {
   position: absolute;
   top: 110%;
-  min-width: 100px;
+  width: 100%;
   border-radius: 10px;
 
   overflow: hidden;
@@ -90,8 +90,11 @@
 
 @media (max-width: 767px) {
   .custom-select {
+    width: 30%;
+    min-width: unset;
     min-height: 60px;
-    padding: 0.25em 0.5em;
+
+    padding: 0.15em 0.35em;
   }
 
   .selected-option,
