--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -41,12 +41,13 @@
   .filters {
     width: 100%;
     justify-content: space-between;
-    gap: unset;
+    gap: 0.5em;
   }
 
   .name-filter {
+    width: 70%;
     min-height: 60px;
     font-size: 1rem;
-    padding: 0.25em 0.5em;
+    padding: 0.15em 0.35em;
   }
 }
